--- a/src/app/components/active-referrals/active-referrals.component.html
+++ b/src/app/components/active-referrals/active-referrals.component.html
@@ -30,12 +30,12 @@
 
         <ng-container matColumnDef="dateCreated">
           <th mat-header-cell *matHeaderCellDef> Date Created</th>
-          <td mat-cell *matCellDef="let element"> {{element.dateCreated | date}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.dateCreated | date : 'medium'}} </td>
         </ng-container>
 
         <ng-container matColumnDef="lastUpdated">
           <th mat-header-cell *matHeaderCellDef> Last Updated</th>
-          <td mat-cell *matCellDef="let element"> {{element.lastUpdated | date}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.lastUpdated | date : 'medium'}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
