--- a/src/app/components/active-referrals/active-referrals.component.html
+++ b/src/app/components/active-referrals/active-referrals.component.html
@@ -38,6 +38,14 @@
           <td mat-cell *matCellDef="let element"> {{element.lastUpdated | date : 'medium'}} </td>
         </ng-container>
 
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef> Actions </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-stroked-button color="primary">Edit</button>
+            <button style="margin-left: 1em" mat-stroked-button color="accent">Delete</button>
+          </td>>
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
