--- a/src/app/components/active-referrals/active-referrals.component.html
+++ b/src/app/components/active-referrals/active-referrals.component.html
@@ -41,7 +41,7 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef> Actions </th>
           <td mat-cell *matCellDef="let element">
-            <button mat-stroked-button color="primary">Edit</button>
+            <button mat-stroked-button color="primary" (click)="onEdit(element)">Edit</button>
             <button style="margin-left: 1em" mat-stroked-button color="accent">Delete</button>
           </td>>
         </ng-container>
