Select Service Provider dropdown is populated based on the value from the selected provider.

--- a/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
+++ b/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
@@ -11,9 +11,9 @@
               Service Type
             </mat-label>
             <mat-select id="serviceType" formControlName="serviceType">
-              <mat-option *ngFor="let educationLevel of fhirConstants.EDUCATION_LEVEL"
-                          [value]="educationLevel">
-                {{educationLevel.display}}
+              <mat-option *ngFor="let service of getServices(selectedServiceProvider)"
+                          [value]="service">
+                {{service.display}}
               </mat-option>
             </mat-select>
             <mat-error>
