--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,3 +60,30 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .col {
   flex: 1;        /* distributes space on the line equally among items */
 }
+
+
+.loading {
+  //  font-size: 18px;
+}
+
+.loading:after {
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: bottom;
+  -webkit-animation: ellipsis steps(4,end) 900ms infinite;
+  animation: ellipsis steps(4,end) 900ms infinite;
+  content: "\2026"; /* ascii code for the ellipsis character */
+  width: 0px;
+}
+
+@keyframes ellipsis {
+  to {
+    width: 1.25em;
+  }
+}
+
+@-webkit-keyframes ellipsis {
+  to {
+    width: 1.25em;
+  }
+}
