--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,3 +87,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     width: 1.25em;
   }
 }
+
+.mat-snack-bar-container {
+  margin-top: 18em !important;
+}
+
+.mat-simple-snackbar {
+  color: whitesmoke !important;
+}
