--- a/src/app/components/service-request-list/service-request-list.component.scss
+++ b/src/app/components/service-request-list/service-request-list.component.scss
@@ -12,3 +12,11 @@ table {
 .spacer {
   flex-grow: 1;
 }
+
+.mat-row:hover {
+  background-color: whitesmoke;
+}
+
+.mat-icon {
+  vertical-align: middle;
+}
