--- a/src/app/components/service-request-list/service-request-list.component.html
+++ b/src/app/components/service-request-list/service-request-list.component.html
@@ -29,12 +29,14 @@
     <th mat-header-cell *matHeaderCellDef> Actions </th>
     <td mat-cell *matCellDef="let element">
       <button mat-stroked-button color="primary" (click)="onEdit(element)">Edit</button>
-      <button style="margin-left: 1em" mat-stroked-button color="accent">Delete</button>
+      <mat-icon color="accent" (click)="onDelete(element); $event.stopPropagation()" style="margin-left: 1em">
+        delete
+      </mat-icon>
     </td>>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" style="cursor: pointer" (click)="onRowClick(row)"></tr>
 
   <ng-container *ngIf="isLoading">
     <tr class="mat-row" *matNoDataRow>
