Changed the way the conformation dialog works.

--- a/src/app/components/conformation-dialog/conformation-dialog.component.html
+++ b/src/app/components/conformation-dialog/conformation-dialog.component.html
@@ -3,6 +3,6 @@
   {{content}}
 </div>
 <div mat-dialog-actions align="end">
-  <button mat-button (click)="reject()">{{rejectBtnTitle}}</button>
-  <button mat-button color="primary" (click)="confirm()" cdkFocusInitial>{{confirmBtnTitle}}</button>
+  <button mat-button (click)="onSecondaryClick()">{{secondaryActionBtnTitle}}</button>
+  <button mat-button color="primary" (click)="onDefaultClick()" cdkFocusInitial>{{defaultActionBtnTitle}}</button>
 </div>
