--- a/src/app/components/service-provider-list/service-provider-list.component.html
+++ b/src/app/components/service-provider-list/service-provider-list.component.html
@@ -20,7 +20,7 @@
     No service providers found.
   </div>
   <div *ngFor="let serviceProvider of serviceProviders">
-    <div style="margin-bottom: 1em">
+    <div style="margin-bottom: 1em; margin-top: 1em">
       <app-service-provider
         [serviceProvider]=serviceProvider
         (selectedProviderEvent)="onSelectedServiceProvider($event)"
