--- a/src/app/components/fhir-widgets/telecom/telecom.component.html
+++ b/src/app/components/fhir-widgets/telecom/telecom.component.html
@@ -1,5 +1,4 @@
 <div class="telecom" *ngFor="let entry of telecom">
-  <div class="system">{{entry.system}}</div>
-  <div class="use">{{entry.use}}</div>
+  <div class="value">{{entry.system.toString() | titlecase}} {{ (entry.use ? '(' + toTitleCase(entry.use.toString()) + ')' : '')}}</div>
   <div class="value">{{entry.value}}</div>
 </div>
