--- a/src/app/components/registration/registration.component.scss
+++ b/src/app/components/registration/registration.component.scss
@@ -14,3 +14,16 @@
   width: 2px;
   background-color: #0d47a1;
 }
+
+.flex-cell-2 {
+  flex-grow: 2;
+  padding: 5px;
+}
+.flex-cell-1 {
+  flex-grow: 1;
+  padding: 5px;
+}
+.flex-cell-3 {
+  flex-grow: 3;
+  padding: 5px;
+}
