--- a/src/app/components/conformation-dialog/conformation-dialog.component.html
+++ b/src/app/components/conformation-dialog/conformation-dialog.component.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title>{{title}}</h1>
 <div mat-dialog-content>
-  {{content}}
+  <span [innerHTML]="content"></span>
 </div>
 <div mat-dialog-actions align="end">
-  <button mat-button (click)="onSecondaryClick()">{{secondaryActionBtnTitle}}</button>
-  <button mat-button color="primary" (click)="onDefaultClick()" cdkFocusInitial>{{defaultActionBtnTitle}}</button>
+  <button mat-stroked-button (click)="onSecondaryClick()">{{secondaryActionBtnTitle}}</button>
+  <button mat-stroked-button color="primary" (click)="onDefaultClick()" cdkFocusInitial>{{defaultActionBtnTitle}}</button>
 </div>
