Added more handling to the general info to handle parameter updates.

--- a/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
+++ b/src/app/components/general-information-and-service-type/general-information-and-service-type.component.html
@@ -132,14 +132,14 @@
 
   </form>
 
-  <pre>{{usCorePatient| json}}</pre>
+<!--  <pre>{{usCorePatient| json}}</pre>-->
 </div>
 
 <div class="row-button-wrapper">
   <button mat-raised-button (click)="onCancel()">Cancel</button>
   <span class="spacer"></span>
-  <button mat-raised-button (click)="onSave()">Save</button>
-  <button mat-raised-button (click)="onSaveAndContinue()"
+  <button mat-raised-button (click)="onSave(false)">Save</button>
+  <button mat-raised-button (click)="onSave(true)"
           style="margin-left: 1em">
     Save and Continue
   </button>
