--- a/src/app/components/service-provider-list/service-provider-list.component.html
+++ b/src/app/components/service-provider-list/service-provider-list.component.html
@@ -35,8 +35,8 @@
 <div class="row-button-wrapper">
   <button mat-raised-button (click)="onCancel()">Cancel</button>
   <span class="spacer"></span>
-  <button mat-raised-button (click)="onSave()" [disabled]="!selectedServiceProvider">Save</button>
-  <button mat-raised-button (click)="onSaveAndContinue()" [disabled]="!selectedServiceProvider"
+  <button mat-raised-button (click)="onSave(false)" [disabled]="!selectedServiceProvider">Save</button>
+  <button mat-raised-button (click)="onSave(true)" [disabled]="!selectedServiceProvider"
           style="margin-left: 1em">
     Save and Continue
   </button>
