--- a/src/app/components/supporting-information/supporting-information.component.html
+++ b/src/app/components/supporting-information/supporting-information.component.html
@@ -1,17 +1,17 @@
 <!-- TODO In addition to the form functionality we need to extract all the css into classes-->
 <div class="scrollable-container">
-  <form [formGroup]="requestSupportingInformationForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="supportingInformationForm">
 
     <div class="row">
 
       <mat-form-field appearance="outline" class="col" style="margin-right: 1em">
         <mat-label>Height</mat-label>
-        <input matInput type='text' formControlName="height">
+        <input type="number" matInput formControlName="heightValue">
       </mat-form-field>
 
       <mat-form-field appearance="outline" style="width: 7%; margin-right: 2em">
         <mat-label>Unit</mat-label>
-        <mat-select>
+        <mat-select formControlName="heightUnit">
           <mat-option *ngFor="let unit of appConstants.HEIGHT_UNITS" [value]="unit">
             {{unit}}
           </mat-option>
@@ -20,12 +20,12 @@
 
       <mat-form-field appearance="outline" class="col" style="margin-left: 2em; margin-right: 1em;">
         <mat-label>Weight</mat-label>
-        <input matInput type='text' formControlName="weight">
+        <input type="number" matInput formControlName="weightValue">
       </mat-form-field>
 
       <mat-form-field appearance="outline" style="width: 7%; margin-right: 2em;">
         <mat-label>Unit</mat-label>
-        <mat-select>
+        <mat-select formControlName="weightUnit">
           <mat-option *ngFor="let unit of appConstants.WEIGHT_UNITS" [value]="unit">
             {{unit}}
           </mat-option>
@@ -35,7 +35,7 @@
       <mat-form-field appearance="outline" style="margin-left: 2em;">
         <mat-label>BMI</mat-label>
         <span matSuffix>kg/m²</span>
-        <input matInput type='text' formControlName="bmi">
+        <input matInput type="number" formControlName="bmi">
       </mat-form-field>
 
     </div>
@@ -45,7 +45,7 @@
         <mat-form-field appearance="outline" style="width: 30%">
           <mat-label>BP (SYS)</mat-label>
           <span matSuffix>mmHg</span>
-          <input matInput type='text' formControlName="bp">
+          <input matInput type="number" formControlName="bpSystolic">
         </mat-form-field>
 
         <span style="margin-right: 1em; margin-left: 1em; font-weight: bold; font-size: x-large">/</span>
@@ -53,36 +53,44 @@
         <mat-form-field appearance="outline" style="margin-right: 1em; width: 30%">
           <mat-label>BP (DIA)</mat-label>
           <span matSuffix>mmHg</span>
-          <input matInput type='text' formControlName="bp">
+          <input matInput type="number" formControlName="bpDiastolic">
         </mat-form-field>
       </div>
 
-      <div class="col">
-        <mat-form-field appearance="outline" style="width: 85%">
-          <mat-label>Smoking Status</mat-label>
-          <mat-select formControlName="smokingStatus">
-            <mat-option
-              *ngFor="let smokingStatus of fhirConstants.SMOKING_STATUS"
-              [value]="smokingStatus">
-              {{smokingStatus.display}}
-            </mat-option>
-          </mat-select>
-          <mat-error>
-            Please select smoking status
-          </mat-error>
-        </mat-form-field>
-      </div>
+<!--      <div class="col">-->
+<!--        <mat-form-field appearance="outline" style="width: 85%">-->
+<!--          <mat-label>Smoking Status</mat-label>-->
+<!--          <mat-select formControlName="smokingStatus">-->
+<!--            <mat-option-->
+<!--              *ngFor="let smokingStatus of fhirConstants.SMOKING_STATUS"-->
+<!--              [value]="smokingStatus">-->
+<!--              {{smokingStatus.display}}-->
+<!--            </mat-option>-->
+<!--          </mat-select>-->
+<!--          <mat-error>-->
+<!--            Please select smoking status-->
+<!--          </mat-error>-->
+<!--        </mat-form-field>-->
+<!--      </div>-->
 
 
     </div>
 
-    <div class="row" style="margin-top: 1em">
-      <mat-form-field appearance="outline" class="col">
-        <mat-label>Medication History</mat-label>
-        <textarea matInput type='text' formControlName="medicalHistory" rows="10"></textarea>
-      </mat-form-field>
-    </div>
+<!--    <div class="row" style="margin-top: 1em">-->
+<!--      <mat-form-field appearance="outline" class="col">-->
+<!--        <mat-label>Medication History</mat-label>-->
+<!--        <textarea matInput type='text' formControlName="medicalHistory" rows="10"></textarea>-->
+<!--      </mat-form-field>-->
+<!--    </div>-->
   </form>
 </div>
-
+<div class="row-button-wrapper">
+  <button mat-raised-button (click)="onCancel()">Cancel</button>
+  <span class="spacer"></span>
+  <button mat-raised-button (click)="onSave(false)">Save</button>
+  <button mat-raised-button (click)="onSave(true)"
+          style="margin-left: 1em">
+    Save and Continue
+  </button>
+</div>
 
