--- a/src/app/components/supporting-information/supporting-information.component.html
+++ b/src/app/components/supporting-information/supporting-information.component.html
@@ -56,41 +56,18 @@
           <input matInput type="number" formControlName="bpDiastolic">
         </mat-form-field>
       </div>
-
-<!--      <div class="col">-->
-<!--        <mat-form-field appearance="outline" style="width: 85%">-->
-<!--          <mat-label>Smoking Status</mat-label>-->
-<!--          <mat-select formControlName="smokingStatus">-->
-<!--            <mat-option-->
-<!--              *ngFor="let smokingStatus of fhirConstants.SMOKING_STATUS"-->
-<!--              [value]="smokingStatus">-->
-<!--              {{smokingStatus.display}}-->
-<!--            </mat-option>-->
-<!--          </mat-select>-->
-<!--          <mat-error>-->
-<!--            Please select smoking status-->
-<!--          </mat-error>-->
-<!--        </mat-form-field>-->
-<!--      </div>-->
-
-
     </div>
 
-<!--    <div class="row" style="margin-top: 1em">-->
-<!--      <mat-form-field appearance="outline" class="col">-->
-<!--        <mat-label>Medication History</mat-label>-->
-<!--        <textarea matInput type='text' formControlName="medicalHistory" rows="10"></textarea>-->
-<!--      </mat-form-field>-->
-<!--    </div>-->
   </form>
+
 </div>
+
 <div class="row-button-wrapper">
   <button mat-raised-button (click)="onCancel()">Cancel</button>
   <span class="spacer"></span>
-  <button mat-raised-button (click)="onSave(false)">Save</button>
   <button mat-raised-button (click)="onSave(true)"
           style="margin-left: 1em">
-    Save and Continue
+    Submit
   </button>
 </div>
 
